+ note model and migration

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include: 
       file: db/changelog/changeset/adduser.yaml
+  - include:
+      file: db/changelog/changeset/addnote.yaml
