--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  db:
+  dbs:
     image: postgres:13.7-alpine
     volumes:
       - /var/lib/postgresql/data
@@ -9,12 +9,14 @@ services:
       - POSTGRES_DB=whynotes
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=root
+    ports:
+      - "5432:5432"
 
   web:
     build: .
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      - dbs
     environment:
-      spring.datasource.url: "jdbc:postgresql://localhost:5432/whynotes"
+      spring.datasource.url: "jdbc:postgresql://dbs:5432/whynotes"
